bump version to 0.4.0 and ensure java 17
also remove MaxPermSize compiler option